# xiaoxuan-assembly

./: .gitignore  Cargo.toml  README.md
crates/assembler/: Cargo.toml
crates/assembler/src/: codegen.rs  lib.rs  utils.rs
crates/assembler/tests/lib/: compile.sh  libtest0.c  test_import_normal.c  test_import_tls.c  test_import_tls_data.c  test_indirect_function_call.c  test_threads.c
crates/encoder-x86-64/: Cargo.toml
crates/encoder-x86-64/examples/: runner.rs
crates/encoder-x86-64/src/: encode.rs  instruction.rs  lib.rs  mnemonic.rs  parser.rs
crates/encoder-x86-64/tests/: text-to-bin.sh
crates/encoding-x86-64/: Cargo.toml
crates/encoding-x86-64/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: ast.rs  lib.rs  native_assembly_instruction.rs  parser.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs  opcode.rs
docs/: cranelift_ir_and_xiaoxuan_native_instructions_map.ods
