[package]
name = "anna_assembler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift-codegen = "0.102.1"
cranelift-frontend = "0.102.1"
cranelift-module = "0.102.1"
cranelift-jit = "0.102.1"
cranelift-native = "0.102.1"
cranelift-object = "0.102.1"
# target-lexicon = "0.12.12"

[dev-dependencies]
pretty_assertions = "1.4.0"
