[package]
name = "anna_assembler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift-codegen = "0.107.0"
cranelift-frontend = "0.107.0"
cranelift-module = "0.107.0"
cranelift-jit = "0.107.0"
cranelift-native = "0.107.0"
cranelift-object = "0.107.0"
# target-lexicon = "0.12.12"

[dev-dependencies]
pretty_assertions = "1.4.0"
